Fix(core): 修复bug 1.修复已知bug,增加二级域名

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Vite + Vue</title>
+    <title>简历生成器 | 一款好用的简历生成器</title>
     <style>
         /* 重置默认的边距和填充 */
         body, html, #app {
