--- a/index.html
+++ b/index.html
@@ -5,18 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>简历生成器 | 一款好用的简历生成器</title>
-    <style>
-        /* 重置默认的边距和填充 */
-        body, html, #app {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #E9EBEE;
-        }
-    </style>
 </head>
-<body>
+<body style="margin: 0">
 <div id="app"></div>
 <script type="module" src="/src/main.js"></script>
 </body>
